feat: Update Menu command